--- a/style1.scss
+++ b/style1.scss
@@ -1,13 +1,14 @@
 .container {
-    padding: 2rem 0rem;
+  padding: 2rem 0rem;
+}
+
+h4 {
+  margin: 2rem 0rem 1rem;
+}
+
+.table-image {
+  td,
+  th {
+    vertical-align: middle;
   }
-  
-  h4 {
-    margin: 2rem 0rem 1rem;
-  }
-  
-  .table-image {
-    td, th {
-      vertical-align: middle;
-    }
-  }
+}
